--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 # Ignore .settings file, bin, target and .idea folder
 /.settings
-/.exe
 /.bin
 /.idea
+
+# Ignored compiler files
+*.exe
 
 # Ignore all VS Code files
 /.json
 /.vscode
 
 # Ignored all the compiler files from ROS2
-/.build
-/.install
-/.log
+.build/
+.install/
+.log/
