--- a/28-SDfR-FinalProject/sdfr_ws/src/relbot_simulator/package.xml
+++ b/28-SDfR-FinalProject/sdfr_ws/src/relbot_simulator/package.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros2_relbot_control</name>
-  <version>0.0.0</version>
+  <name>relbot_simulator</name>
+  <version>1.1.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="miguel_oteo@outlook.com">migueloteo</maintainer>
+  <maintainer email="g.vanoort@utwente.nl">oortg</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>rosidl_default_generators</build_depend>
+
+  <exec_depend>ros2launch</exec_depend>
+  
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-
-  <depend>rclcpp</depend>
-  <depend>sensor_msgs</depend>
-  <depend>custom_msg</depend>
-  <depend>geometry_msgs</depend>
-  <depend>std_msgs</depend>
-  <depend>cv_bridge</depend>
-  <depend>image_transport</depend>
-  <depend>OpenCV</depend>
-
+  
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
