--- a/28-SDfR-FinalProject/sdfr_ws/src/relbot_interfaces/CMakeLists.txt
+++ b/28-SDfR-FinalProject/sdfr_ws/src/relbot_interfaces/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(custom_msg)
+project(relbot_interfaces)
 
 # Enable C++11 or newer
 set(CMAKE_CXX_STANDARD 11)
