--- a/28-SDfR-FinalProject/sdfr_ws/src/relbot_interfaces/package.xml
+++ b/28-SDfR-FinalProject/sdfr_ws/src/relbot_interfaces/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>custom_msg</name>
+  <name>relbot_interfaces</name>
   <version>0.0.0</version>
   <description>A ROS 2 package for custom message definitions.</description>
   <maintainer email="miguel_oteo@outlook.com">migueloteo</maintainer>
@@ -11,7 +11,7 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  
+
   <export>
     <build_type>ament_cmake</build_type>
     <rosidl_packages suffix="_msgs"></rosidl_packages>
