--- a/28-SDfR-FinalProject/sdfr_ws/src/ros2_introduction/CMakeLists.txt
+++ b/28-SDfR-FinalProject/sdfr_ws/src/ros2_introduction/CMakeLists.txt
@@ -30,4 +30,15 @@ install(
     DESTINATION lib/${PROJECT_NAME}
 )
 
+# Install launch files
+install(DIRECTORY 
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+# Install header files
+install(DIRECTORY include/
+  DESTINATION include
+)
+
 ament_package()
