--- a/28-SDfR-FinalProject/sdfr_ws/src/relbot_twist_drive_controller/CMakeLists.txt
+++ b/28-SDfR-FinalProject/sdfr_ws/src/relbot_twist_drive_controller/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(relbot_diff_drive_control)
+project(relbot_twist_drive_controller)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,24 +8,32 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(example_interfaces REQUIRED)
+find_package(relbot_interfaces REQUIRED)
+find_package(image_functions_sdfr REQUIRED)
+find_package(image_transport REQUIRED)
 
 include_directories(include)
 
 # Add executable
-add_executable(diff_driver_controller src/DiffDriveController.cpp)
+add_executable(relbot_control src/RELbotControl.cpp)
 
 ament_target_dependencies(
-  diff_driver_controller
+  relbot_control
   rclcpp
+  sensor_msgs
   geometry_msgs
+  relbot_interfaces
   example_interfaces
+  image_functions_sdfr
+  image_transport
 )
 
 # Install executable
 install(TARGETS
-  diff_driver_controller
+  relbot_control
   DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -39,17 +47,5 @@ install(DIRECTORY
 install(DIRECTORY include/
   DESTINATION include
 )
-
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
 
 ament_package()
